# Stable-2v2-Pairing-Problem

./: .gitignore  CMakeLists.txt  README.md
config/: PairingConfig.ini
document/: Algo.md
include/backup/: BackupMatcher.h
include/generator/: PreferenceGenerator.h
include/io/: DataReader.h  ResultWriter.h
include/model/: MatchData.h  Player.h
include/solver/: IrvingSolver.h
include/utils/: CycleDetector.h  MatrixUtils.h
src/: main.cpp
src/backup/: BackupMatcher.cpp
src/generator/: PreferenceGenerator.cpp
src/io/: DataReader.cpp  ResultWriter.cpp
src/model/: MatchData.cpp  Player.cpp
src/solver/: IrvingSolver.cpp
src/utils/: CycleDetector.cpp  MatrixUtils.cpp
test/: TestBackupMatcher.cpp  TestFullFlow.cpp  TestIrvingPhase1.cpp  TestIrvingPhase2.cpp  TestPreferenceGenerator.cpp
